--- a/app/css/vendor.css
+++ b/app/css/vendor.css
@@ -71,6 +71,9 @@ pre {
  */
 a {
   background-color: transparent;
+  -webkit-transition: all 0.2s;
+  -o-transition: all 0.2s;
+  transition: all 0.2s;
 }
 
 /**
