--- a/src/scss/_fonts.scss
+++ b/src/scss/_fonts.scss
@@ -1,1 +1,2 @@
-// @include font-face("Muller", "../fonts/MullerRegular", 400, normal);
+@include font-face("Ubuntu", "../fonts/UbuntuRegular", 400, normal);
+@include font-face("Ubuntu", "../fonts/UbuntuBold", 700, normal);
