--- a/src/scss/_vars.scss
+++ b/src/scss/_vars.scss
@@ -2,11 +2,14 @@
 // colors
 :root {
   // base
-  --font-family: "Open Sans", sans-serif;
+  --font-family: "Ubuntu", sans-serif;
   --content-width: 1170px;
   --container-offset: 15px;
   --container-width: calc(var(--content-width) + (var(--container-offset) * 2));
 
   // colors
-  --light-color: #fff;
+  --color-light: #fff;
+  --color-gray: #424551;
+  --color-primary: #4872f2;
+  --color-ebony: #1e212c;
 }
