created section hero and search-form

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -71,7 +71,7 @@
     </nav>
     <div class="overlay"></div>
     <a href="tel:7405999999" class="account__link account__link--mobile contact-link contact-link--call">
-      <span class="contact-link__value">8(800) 999-9999</span>
+      <span class="contact-link__value--mod">8(800) 999-9999</span>
     </a>
     <div class="burger">
       <span></span>
