--- a/src/scss/_settings.scss
+++ b/src/scss/_settings.scss
@@ -31,6 +31,16 @@ a {
   text-decoration: none;
 }
 
+input {
+  outline: none;
+  border: none;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+  background-color: transparent;
+  cursor: pointer;
+}
+
 .site-container {
   overflow: hidden; // если используем на сайте position: sticky - убрать эту настройку
 }
@@ -111,6 +121,24 @@ a {
   position: relative;
 }
 
+/* полоса прокрутки (скроллбар) */
+::-webkit-scrollbar {
+  width: 4px;
+  /* ширина для вертикального скролла */
+  height: 8px;
+  /* высота для горизонтального скролла */
+  /* background-color: #143861; */
+}
+
+/* ползунок скроллбара */
+::-webkit-scrollbar-thumb {
+  background-color: #843465;
+  box-shadow: inset 1px 1px 10px #f3faf7;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #253861;
+}
 // .burger {
 //   @include burger;
 // }
