--- a/src/scss/_vars.scss
+++ b/src/scss/_vars.scss
@@ -1,4 +1,3 @@
-// если хотите использовать sass-переменные - удалите root
 // colors
 :root {
   // base
@@ -8,8 +7,13 @@
   --container-width: calc(var(--content-width) + (var(--container-offset) * 2));
 
   // colors
+  --color-violet: #edf1fe;
   --color-light: #fff;
   --color-gray: #424551;
-  --color-primary: #4872f2;
+  --color-primary: #edc830;
+  --color-yellow: #ffe733;
   --color-ebony: #1e212c;
+  --color-blueberry: #518bc4;
+  --color-rinse: #d4d9de;
+  --color-great: #7e8389;
 }
