--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -1,4 +1,9 @@
 .header {
+  position: relative;
+  z-index: 10;
+  box-shadow: 0 4px 4px var(--color-blueberry);
+  background-color: #0069b5;
+
   &__container {
     @include flex-all-sb;
 
@@ -10,21 +15,7 @@
   }
 
   &__top {
-    border-bottom: 1px solid #dbe0e5;
-  }
-
-  &--mod {
-    display: none;
-    margin-bottom: 6px;
-    border-bottom: 1px solid #dbe0e5;
-    padding-top: 10px;
-    padding-bottom: 8px;
-    width: 100%;
-
-    @include small-tablet {
-      display: block;
-      padding-left: 10px;
-    }
+    border-bottom: 1px solid var(--color-blueberry);
   }
 
   &__left {
@@ -35,14 +26,27 @@
       display: block;
     }
   }
+
+  &--mod {
+    display: none;
+    border-bottom: 1px solid var(--color-blueberry);
+    padding-top: 8px;
+    padding-bottom: 6px;
+    width: 100%;
+
+    @include small-tablet {
+      display: block;
+      padding-left: 10px;
+    }
+  }
 }
 
 .geolocation {
   margin: 0;
   margin-right: 24px;
   padding-left: 22px;
-  color: var(--color-gray);
-  background-image: url("../img/location.svg");
+  color: var(--color-light);
+  background-image: url("../img/i-location.svg");
   background-position: left center;
   background-size: 16px 16px;
   background-repeat: no-repeat;
@@ -50,6 +54,10 @@
   @include tablet {
     margin-right: 14px;
     line-height: 40px;
-    color: var(--color-gray);
+    color: var(--color-light);
+  }
+
+  @include small-tablet {
+    color: var(--color-ebony);
   }
 }
