--- a/src/scss/components/_menu.scss
+++ b/src/scss/components/_menu.scss
@@ -47,7 +47,7 @@
       top: calc(50% - 1px);
       width: 100%;
       height: 2px;
-      background-color: #000;
+      background-color: #fff;
       transition: all 0.3s ease 0s;
 
       &:first-child {
@@ -90,7 +90,7 @@
     justify-content: center;
     width: 100%;
     height: 100vh;
-    background-color: rgba(0, 0, 0, 0.7);
+    background-color: rgba(0, 0, 0, 70%);
     opacity: 0;
     visibility: hidden;
     transition: all 0.3s ease-in-out;
