--- a/src/scss/components/_hover-list.scss
+++ b/src/scss/components/_hover-list.scss
@@ -13,8 +13,7 @@
   border-radius: 8px;
   padding: 16px 18px;
   width: 270px;
-  box-shadow: 0 0 5px rgb(0 0 0 / 5%),
-    0 10px 10px rgb(0 0 0 / 10%);
+  box-shadow: 0 0 5px rgb(0 0 0 / 5%), 0 10px 10px rgb(0 0 0 / 10%);
 
   &__link {
     display: flex;
