--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -14,6 +14,7 @@
 @import "./components/search-filtr/tourists";
 @import "./components/search-filtr/tourists-child";
 @import "./components/search-filtr/where";
+@import "./components/popular-categories";
 
 // подключения компонентов страницы (мелкие компоненты)
 @import "./components/header-account";
