--- a/src/scss/_vars.scss
+++ b/src/scss/_vars.scss
@@ -1,4 +1,3 @@
-// colors
 :root {
   // base
   --font-family: "Ubuntu", sans-serif;
@@ -10,12 +9,13 @@
   --color-violet: #edf1fe;
   --color-light: #fff;
   --color-gray: #424551;
-  --color-primary: #edc830;
-  --color-yellow: #ffe733;
+  --color-primary: #ffe733;
+  --color-active: #f3db25;
   --color-ebony: #1e212c;
   --color-blueberry: #518bc4;
   --color-rinse: #d4d9de;
   --color-great: #7e8389;
+  --color-blue: #4e3e8e;
 
   // sizes
   --grid-gap: 30px;
