--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -15,6 +15,7 @@
 @import "./components/search-filtr/tourists-child";
 @import "./components/search-filtr/where";
 @import "./components/popular-categories";
+@import "./components/slider-main";
 
 // подключения компонентов страницы (мелкие компоненты)
 @import "./components/header-account";
