--- a/src/scss/vendor.scss
+++ b/src/scss/vendor.scss
@@ -1,5 +1,6 @@
 @import "./vendor/normalize";
 @import "../../node_modules/air-datepicker/air-datepicker";
+@import "../../node_modules/swiper/swiper-bundle.min";
 
 // стили для модального окна
 // @import "../../node_modules/graph-modal/dist/graph-modal.min"
@@ -9,6 +10,3 @@
 
 // стили для библиотеки aos
 // @import "../../node_modules/aos/dist/aos";
-
-// стили для свайпера
-// @import "../../node_modules/swiper/swiper-bundle.min";
