created 'section-advantages',made minor corrections to the project code' and added the app folder to the gitignor

--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,10 +1,10 @@
 <section class="hero" id="hero">
   <div class="container hero__container">
-    <h2 class="hero__title">
+    <h2 class="main-title title--center">
       Выбирайте и покупайте туры онлайн
     </h2>
-    <h3 class="hero__subtitle">
-      Купить тур легче, чем вы думаете.
+    <h3 class="main-descr descr--center">
+      Купить тур легче, чем вы думаете
     </h3>
     <!-- --------------------------------- Search-form ----------------------------------- -->
     <section class="search-form">
