--- a/src/partials/slider-main.html
+++ b/src/partials/slider-main.html
@@ -5,8 +5,8 @@
 
         <div class="swiper-slide slide slide--1">
               <div class="slide__content">
-                <h1 class="main-title main-title--inter">Бахрейн</h1>
-                <p class="main-descr main-descr--inter">
+                <h1 class="title title--inter">Бахрейн</h1>
+                <p class="descr descr--inter">
                   Настоящий арабский колорит
                 </p>
                 <div class="slide__btns">
@@ -17,8 +17,8 @@
 
         <div class="swiper-slide slide slide--2">
               <div class="slide__content">
-                <h1 class="main-title main-title--inter">Необыкновенный Стамбул</h1>
-                <p class="main-descr main-descr--inter">
+                <h1 class="title title--inter">Необыкновенный Стамбул</h1>
+                <p class="descr descr--inter">
                   Познакомтесь с самым колоритным городом Турции
                 </p>
                 <div class="slide__btns">
@@ -29,8 +29,8 @@
 
         <div class="swiper-slide slide slide--3">
             <div class="slide__content">
-              <h1 class="main-title main-title--home">Популярные отели</h1>
-              <p class="main-descr main-descr--home">
+              <h1 class="title title--home">Популярные отели</h1>
+              <p class="descr descr--home">
                 для отдыха в России
               </p>
               <div class="slide__btns">
