--- a/src/scss/_vars.scss
+++ b/src/scss/_vars.scss
@@ -16,6 +16,7 @@
   --color-rinse: #d4d9de;
   --color-great: #7e8389;
   --color-blue: #4e3e8e;
+  --color-sapphire: #0069b5;
 
   // sizes
   --grid-gap: 30px;
