--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -17,6 +17,7 @@
 @import "./components/popular-categories";
 @import "./components/slider-main";
 @import "./components/tour-selection";
+@import "./components/advantages";
 
 // подключения компонентов страницы (мелкие компоненты)
 @import "./components/header-account";
