--- a/app/css/main.css
+++ b/app/css/main.css
@@ -14,6 +14,7 @@
   --color-rinse: #d4d9de;
   --color-great: #7e8389;
   --color-blue: #4e3e8e;
+  --color-sapphire: #0069b5;
   --grid-gap: 30px;
 }
 
@@ -118,7 +119,7 @@ input {
   appearance: none;
   border: none;
   border-radius: 0;
-  background-color: #fff;
+  background-color: var(--color-light);
 }
 .input-reset::-webkit-search-decoration, .input-reset::-webkit-search-cancel-button, .input-reset::-webkit-search-results-button, .input-reset::-webkit-search-results-decoration {
   display: none;
@@ -202,9 +203,73 @@ input {
   margin: 0;
   margin-bottom: 40px;
   font-weight: 600;
-  font-size: 28px;
+  font-size: 30px;
   line-height: 130%;
   color: var(--color-ebony);
+}
+.title--inter {
+  margin: 0;
+  font-size: 42px;
+  line-height: 150%;
+  color: var(--color-light);
+}
+.title--home {
+  margin: 0;
+  font-size: 42px;
+  line-height: 150%;
+  color: var(--color-blue);
+}
+.title--adv {
+  margin-bottom: 10px;
+}
+@media (max-width: 768px) {
+  .title {
+    font-size: 28px;
+    line-height: 120%;
+  }
+}
+@media (max-width: 576px) {
+  .title {
+    margin-bottom: 10px;
+    font-size: 24px;
+    line-height: 120%;
+  }
+}
+
+.title--center {
+  text-align: center;
+}
+
+.descr {
+  margin: 0;
+  margin-bottom: 32px;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 150%;
+  color: var(--color-ebony);
+}
+.descr--inter {
+  margin-bottom: 56px;
+  color: var(--color-light);
+}
+.descr--home {
+  margin-bottom: 56px;
+  color: var(--color-blue);
+}
+@media (max-width: 576px) {
+  .descr--home {
+    color: var(--color-light);
+  }
+}
+@media (max-width: 576px) {
+  .descr {
+    font-size: 16px;
+    line-height: 120%;
+  }
+}
+
+.descr--center {
+  text-align: center;
 }
 
 .btn {
@@ -251,57 +316,22 @@ input {
 
 .main-title {
   margin: 0;
-  margin-bottom: 10px;
+  margin-bottom: 26px;
   font-weight: 700;
-  font-size: 42px;
+  font-size: 36px;
   line-height: 130%;
   letter-spacing: 1px;
-  color: var(--color-ebony);
-}
-.main-title--inter {
+  text-shadow: 0 3px 2px rgba(0, 0, 0, 0.3), 0 6px 8px rgba(0, 0, 0, 0.3), 0 12px 24px rgba(0, 0, 0, 0.3);
   color: var(--color-light);
-}
-.main-title--home {
-  color: var(--color-blue);
-}
-@media (max-width: 768px) {
-  .main-title {
-    font-size: 32px;
-    line-height: 120%;
-  }
-}
-@media (max-width: 576px) {
-  .main-title {
-    font-size: 28px;
-    line-height: 120%;
-  }
 }
 
 .main-descr {
   margin: 0;
-  font-weight: 400;
-  font-size: 20px;
-  line-height: 150%;
+  margin-bottom: 60px;
+  font-size: 26px;
+  line-height: 110%;
+  text-shadow: 0 3px 2px rgba(0, 0, 0, 0.3), 0 6px 8px rgba(0, 0, 0, 0.3), 0 12px 24px rgba(0, 0, 0, 0.3);
   color: var(--color-light);
-}
-.main-descr--inter {
-  margin-bottom: 56px;
-  color: var(--color-light);
-}
-.main-descr--home {
-  margin-bottom: 56px;
-  color: var(--color-blue);
-}
-@media (max-width: 576px) {
-  .main-descr--home {
-    color: var(--color-light);
-  }
-}
-@media (max-width: 576px) {
-  .main-descr {
-    margin-bottom: 40px;
-    line-height: 120%;
-  }
 }
 
 .header {
@@ -309,7 +339,7 @@ input {
   z-index: 10;
   -webkit-box-shadow: 0 4px 4px var(--color-blueberry);
   box-shadow: 0 4px 4px var(--color-blueberry);
-  background-color: #0069b5;
+  background-color: var(--color-sapphire);
 }
 .header__container {
   display: -webkit-box;
@@ -343,6 +373,8 @@ input {
   }
 }
 .header--mod {
+  position: relative;
+  z-index: -1;
   display: none;
   border-bottom: 1px solid var(--color-blueberry);
   padding-top: 8px;
@@ -353,6 +385,7 @@ input {
   .header--mod {
     display: block;
     padding-left: 10px;
+    background-color: var(--color-sapphire);
   }
 }
 
@@ -1312,7 +1345,12 @@ input {
 .slader-swiper {
   position: relative;
   z-index: 1;
-  margin-bottom: 70px;
+  margin-bottom: 60px;
+}
+@media (max-width: 768px) {
+  .slader-swiper {
+    margin-bottom: 50px;
+  }
 }
 
 .slider-container {
@@ -1542,6 +1580,196 @@ input {
   background: var(--color-active);
 }
 
+.advantages {
+  margin-bottom: 100px;
+  padding: 30px 0;
+  background-image: url(../img/advantages-line.svg);
+  background-position: 50% 47%;
+  background-repeat: no-repeat;
+}
+.advantages__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: nowrap;
+  flex-wrap: nowrap;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+}
+@media (max-width: 768px) {
+  .advantages__list {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+  }
+}
+.advantages__item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  max-width: 234px;
+}
+@media (max-width: 768px) {
+  .advantages__item {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: row;
+    flex-direction: row;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    max-width: 100%;
+  }
+  .advantages__item:not(:last-child) {
+    margin-bottom: 60px;
+  }
+}
+.advantages__text-block {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+}
+@media (max-width: 768px) {
+  .advantages__text-block {
+    -webkit-box-align: start;
+    -ms-flex-align: start;
+    align-items: flex-start;
+    margin-right: 0;
+    margin-left: 16px;
+    width: 220px;
+    font-size: 13px;
+  }
+}
+.advantages__icon {
+  display: inline-block;
+  margin-bottom: 22px;
+  border-radius: 50px;
+  width: 100px;
+  height: 100px;
+  -webkit-box-shadow: 0 10px 20px rgba(180, 190, 225, 0.25);
+  box-shadow: 0 10px 20px rgba(180, 190, 225, 0.25);
+  background-position: 50%;
+  background-size: 48px 48px;
+  background-repeat: no-repeat;
+  background-color: var(--color-light);
+}
+.advantages__icon--speed {
+  background-image: url(../img/speed.png);
+}
+.advantages__icon--comfort {
+  background-image: url(../img/comfort.png);
+}
+.advantages__icon--safety {
+  background-image: url(../img/safety.png);
+}
+.advantages__icon--profit {
+  background-image: url(../img/fire.png);
+}
+@media (max-width: 1024px) {
+  .advantages__icon {
+    width: 90px;
+    height: 90px;
+  }
+}
+@media (max-width: 768px) {
+  .advantages__icon {
+    -ms-flex-negative: 0;
+    flex-shrink: 0;
+    margin-bottom: 0;
+    width: 70px;
+    height: 70px;
+  }
+}
+.advantages__subtitle {
+  margin: 0;
+  margin-bottom: 8px;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 150%;
+  color: var(--color-ebony);
+}
+@media (max-width: 768px) {
+  .advantages__subtitle {
+    font-size: 16px;
+  }
+}
+.advantages__descr {
+  margin: 0;
+  max-width: 212px;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 120%;
+  text-align: center;
+  color: var(--color-ebony);
+}
+@media (max-width: 768px) {
+  .advantages__descr {
+    max-width: 208px;
+    text-align: start;
+  }
+}
+@media (max-width: 1024px) {
+  .advantages {
+    background-position: 50% 45%;
+  }
+}
+@media (max-width: 768px) {
+  .advantages {
+    position: relative;
+    background-image: url(../img/advantages-line-mobile.svg);
+    background-position-y: 70%;
+    background-size: 252px;
+  }
+  .advantages:before {
+    content: "";
+    position: absolute;
+    top: 0;
+    z-index: -1;
+    display: block;
+    width: 100%;
+    height: 100%;
+    background: #f7f7f7;
+  }
+  .advantages__icon-right {
+    -webkit-box-ordinal-group: 2;
+    -ms-flex-order: 1;
+    order: 1;
+  }
+  .advantages__text-block-right {
+    margin: 0;
+    margin-right: 16px;
+  }
+}
+@media (max-width: 768px) {
+  .advantages {
+    margin-bottom: 60px;
+  }
+}
+@media (max-width: 576px) {
+  .advantages {
+    background-position-y: 68%;
+    background-size: 248px;
+  }
+}
+
 .account {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1591,21 +1819,24 @@ input {
   right: 48px;
   top: 22px;
   z-index: -1;
+  display: none;
 }
-@media (min-width: 769px) {
-  .account__link--mobile {
-    position: absolute;
-    top: -60px;
-  }
+.account__link--mobile:hover .contact-link__value--mod {
+  color: var(--color-primary);
 }
 @media (max-width: 1200px) {
-  .account__link:not(:last-child) {
+  .account__link--mobile:not(:last-child) {
     margin-right: 16px;
   }
 }
 @media (max-width: 1024px) {
-  .account__link:not(:last-child) {
+  .account__link--mobile:not(:last-child) {
     margin-right: 12px;
+  }
+}
+@media (max-width: 768px) {
+  .account__link--mobile {
+    display: block;
   }
 }
 
@@ -1934,7 +2165,7 @@ input {
 .hero {
   position: relative;
   z-index: 2;
-  background-image: url(../img/slider2.jpg);
+  background-image: url(../img/hero.jpg);
   background-size: cover;
   background-repeat: no-repeat;
 }
@@ -1950,27 +2181,6 @@ input {
 @media (max-width: 576px) {
   .hero__container {
     padding-bottom: 100px;
-  }
-}
-.hero__title {
-  margin: 0;
-  margin-bottom: 26px;
-  font-size: 36px;
-  text-align: center;
-  text-shadow: 0 3px 2px rgba(0, 0, 0, 0.3), 0 6px 8px rgba(0, 0, 0, 0.3), 0 12px 24px rgba(0, 0, 0, 0.3);
-  color: var(--color-light);
-}
-.hero__subtitle {
-  margin: 0;
-  margin-bottom: 60px;
-  font-size: 26px;
-  text-align: center;
-  text-shadow: 0 3px 2px rgba(0, 0, 0, 0.3), 0 6px 8px rgba(0, 0, 0, 0.3), 0 12px 24px rgba(0, 0, 0, 0.3);
-  color: var(--color-light);
-}
-@media (max-width: 1024px) {
-  .hero__subtitle {
-    margin-bottom: 40px;
   }
 }
 /*# sourceMappingURL=main.css.map */
