--- a/src/scss/components/_hero.scss
+++ b/src/scss/components/_hero.scss
@@ -1,7 +1,7 @@
 .hero {
   position: relative;
   z-index: 2;
-  background-image: url(../img/slider2.jpg);
+  background-image: url(../img/hero.jpg);
   background-size: cover;
   background-repeat: no-repeat;
 
@@ -15,28 +15,6 @@
 
     @include mobile {
       padding-bottom: 100px;
-    }
-  }
-
-  &__title {
-    margin: 0;
-    margin-bottom: 26px;
-    font-size: 36px;
-    text-align: center;
-    text-shadow: 0 3px 2px rgb(0 0 0 / 30%), 0 6px 8px rgb(0 0 0 / 30%), 0 12px 24px rgb(0 0 0 / 30%);
-    color: var(--color-light);
-  }
-
-  &__subtitle {
-    margin: 0;
-    margin-bottom: 60px;
-    font-size: 26px;
-    text-align: center;
-    text-shadow: 0 3px 2px rgb(0 0 0 / 30%), 0 6px 8px rgb(0 0 0 / 30%), 0 12px 24px rgb(0 0 0 / 30%);
-    color: var(--color-light);
-
-    @include tablet {
-      margin-bottom: 40px;
     }
   }
 }
